--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ font-family: 'Outfit', sans-serif; */
 
 body{
   width: 1440px;
-  margin-top: 95px;
+  margin: 95px auto;
   background-color: hsl(217, 54%, 11%);
 }
 
@@ -16,9 +16,8 @@ body{
   padding: 22px;
   background-color:  hsl(216, 50%, 16%);
   border-radius: 3.5%;
-  box-shadow: 0px 0px 2px black;
+  box-shadow: 0px 0px 50px rgba(0,0,0,0.5);
 }
-
 
 /* Inner card iamge and content css code */
 .card{
@@ -33,12 +32,14 @@ body{
   height: 302px;
 }
 
+/* ViewBox1 Image CSS Code */
 .viewbox1 img.equilibrium {
   width: 100%;
   height: 100%;
   border-radius: 10px;
 }
 
+/* Viewbox1, viewbox2 CSS Code */
 .viewbox1 .viewbox2 {
   position: absolute;
   top: 0;
@@ -58,6 +59,7 @@ body{
   opacity: 1;
 }
 
+/* Card Design CSS Code */
 .card h1{
   font-size: 1.3rem;
   margin-bottom: 0px;
@@ -66,11 +68,13 @@ body{
   font-family: 'Outfit', sans-serif;
 }
 
+/* Card h1 tag hove effect css Code */
 .card h1:hover{
   color: hsl(178, 100%, 50%);
   cursor: pointer;
 }
 
+/* Card p tag CSS Code */
 .card p{
   font-size: 18px;
   color: hsl(215, 51%, 70%);
@@ -78,6 +82,7 @@ body{
   font-family: 'Outfit', sans-serif;
 }
 
+/* Icon Design CSS Code */
 .icon{
   display: flex;
   flex-direction: row;
@@ -147,27 +152,34 @@ body{
   cursor: pointer;
 }
 
-/* Attribution desgin css code */
+/* Footer desgin css code */
 
 footer {
-    float: right;
     font-size: 1.1rem;
     font-weight: bold;
     padding: 50px;
     color: white;
     letter-spacing: 1px;
     text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
   }
 
 footer a {
-    text-decoration: none;
     color: yellow;
+    cursor: pointer;
   }
+
+footer a:hover{
+  text-decoration: none;
+  color: orange;
+}
 
 /* This small code make your web Page responsive */
 
 @media screen and (max-width: 1500px) {
   body{
     width: auto;
+    margin: 50px auto;
+    transition: 0.3s;
   }
 }
